--- a/affine_dialog_base.ui
+++ b/affine_dialog_base.ui
@@ -263,7 +263,7 @@
    <property name="geometry">
     <rect>
      <x>380</x>
-     <y>500</y>
+     <y>510</y>
      <width>111</width>
      <height>51</height>
     </rect>
@@ -276,7 +276,7 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>390</y>
+     <y>440</y>
      <width>481</width>
      <height>31</height>
     </rect>
@@ -337,7 +337,7 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>340</y>
+     <y>390</y>
      <width>261</width>
      <height>31</height>
     </rect>
@@ -375,7 +375,7 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>440</y>
+     <y>490</y>
      <width>231</width>
      <height>31</height>
     </rect>
@@ -780,6 +780,48 @@
      <width>121</width>
      <height>20</height>
     </rect>
+   </property>
+  </widget>
+  <widget class="QRadioButton" name="File_Rb">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>290</y>
+     <width>121</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Create file on disc</string>
+   </property>
+  </widget>
+  <widget class="QRadioButton" name="Memory_Rb">
+   <property name="enabled">
+    <bool>true</bool>
+   </property>
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>260</y>
+     <width>151</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Create only memory layer</string>
+   </property>
+  </widget>
+  <widget class="QCheckBox" name="Add_CheckB">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>340</y>
+     <width>151</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Add layer to map canvas</string>
    </property>
   </widget>
  </widget>
